# yaaacd-gui

./: .clang-format  .gitignore  .oclint  .pre-commit-config.yaml  CMakeLists.txt  CPPLINT.cfg
include/: main_window.hpp  objfile.hpp  view_3d.hpp
src/: main.cpp  main_window.cpp  view_3d.cpp
